Update for presentation

--- a/index.html
+++ b/index.html
@@ -73,9 +73,34 @@
         <section>
           <h3>Research</h3>
           <ul>
-            <li>Jieba - 结巴</li>
-            <li>https://github.com/fxsjy/jieba</li>
+            <li>MoE Dict - <a href="https://github.com/g0v/moedict-webkit">https://github.com/g0v/moedict-webkit</a></li>
+
+            <br>
+            Jieba
+            <li>结巴 - Jieba - Chinese Segmentation - <a href="https://github.com/fxsjy/jieba">https://github.com/fxsjy/jieba</a></li>
+
+
+            <li>
+              Nodejieba - <a href="https://github.com/yanyiwu/nodejieba">https://github.com/yanyiwu/nodejieba</a>
+            </li>
+            jp
+            <li>
+              CppJieba - <a href="https://github.com/yanyiwu/cppjieba">https://github.com/yanyiwu/cppjieba</a>
+            </li>
+
           </ul>
+        </section>
+
+        <section>
+          <h3>Progress</h3>
+          <div><img src="result.png" alt="Language Learning with Youtube UI"></div>
+        </section>
+
+        <section>
+          <h3>Progress</h3>
+          <div style="width: 70%;">
+            <video src="result.mp4" controls></video>
+          </div>
         </section>
 
       </div>
